# leadradar_ai

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
config/: target_categories.json
scripts/: run_discovery.py  smoke_test_router.py
src/leadradar/: __init__.py
src/leadradar/agents/: json_utils.py  outreach_agent.py  providers.py  verdict.py
src/leadradar/agents/prompts/: outreach_email.md
src/leadradar/core/: config.py
src/leadradar/llm/: cooldown.py  router.py  schemas.py
src/leadradar/llm/providers/: base.py  gemini_provider.py  groq_provider.py  openrouter_provider.py
src/leadradar/tools/: places_client.py  scoring_rules.py  screenshot.py  web_audit.py
tests/unit/: test_llm_router.py  test_outreach_agent.py  test_places_client.py  test_scoring_rules.py  test_verdict.py  test_web_audit.py
