[project]
name = "leadradar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rohit-rai-0101rm", email = "rohitrai.dev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
leadradar = "leadradar:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
